manifests/payment-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-svc-app
  labels:
    app: payment-svc-app

spec:
  selector:
    matchLabels:
      app: payment-svc-app

  template:
    metadata:
      labels:
        app: payment-svc-app
    spec:
      containers:
        - name: payment-svc-app
          image: skoirala/sa-miniproject-payment-service
          ports:
            - containerPort: 8080
