manifests/address-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: address-app
  labels:
    app: address-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-app
  template:
    metadata:
      labels:
        app: address-app
    spec:
      containers:
        - name: address-app
          image: pantbinod/sa-miniproject-address-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: address-svc
spec:
  selector:
    app.kubernetes.io/name: address-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
