manifests/auth-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-svc-app
  labels:
    app: auth-svc-app
spec:
  selector:
    matchLabels:
      app: auth-svc-app
  template:
    metadata:
      labels:
        app: auth-svc-app
    spec:
      containers:
        - name: auth-service-container
          image: skoirala/sa-miniproject-auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-svc-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
