manifests/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-svc-app
  labels:
    app: order-svc-app

spec:
  selector:
    matchLabels:
      app: order-svc-app

  template:
    metadata:
      labels:
        app: order-svc-app
    spec:
      containers:
        - name: order-svc-app
          image: pantbinod/sa-miniproject-order-service
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  type: ClusterIP
  selector:
    app: order-svc
  ports:
    - port: 80
      targetPort: 8080
