manifests/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-svc-app
  labels:
    app: payment-svc-app

spec:
  selector:
    matchLabels:
      app: payment-svc-app

  template:
    metadata:
      labels:
        app: payment-svc-app
    spec:
      containers:
        - name: payment-svc-app
          image: skoirala/sa-miniproject-payment-service
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  type: ClusterIP
  selector:
    app: payment-svc-app
  ports:
    - port: 80
      targetPort: 8080
