manifests/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  type: ClusterIP
  selector:
    app: payment-svc-app
  ports:
    - port: 3050
      targetPort: 8080
