manifests/transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-app
  labels:
    app: transactions-app
spec:
  selector:
    matchLabels:
      app: transactions-app
  template:
    metadata:
      labels:
        app: transactions-app
    spec:
      containers:
        - name: transactions-container
          image: skoirala/sa-miniproject-transaction-service
---
apiVersion: v1
kind: Service
metadata:
  name: tx-svc
spec:
  type: ClusterIP
  selector:
    app: transactions-app
  ports:
    - port: 80
      targetPort: 8080
